--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-
+    <color name="app_main_color">#2E8CFF</color>
     <color name="text_black">#222222</color>
     <color name="transparent">#00000000</color>
     <color name="white">#ffffff</color>
-
+    <color name="black_alpha_40">#66000000</color>
 </resources>
