--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="transparent">#00000000</color>
     <color name="white">#ffffff</color>
     <color name="black_alpha_40">#66000000</color>
+    <color name="text_gray">#C0C0C0</color>
 </resources>
